Fix not showing close button

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -53,6 +53,13 @@
   .dialog {
     &__fullscreen {
       padding-top: 100px;
+
+      .grow-6{
+        width: 100% !important;;
+      }
+    }
+    &__close{
+      padding: 0 !important;
     }
   }
   .pricing + .pricing {
